[package]
name = "aes67-to-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.19"
poem = { version = "1.3.57", features = ["anyhow", "websocket"] }
regex = "1.9.1"
rtp-rs = "0.6.0"
serde = { version = "1.0.176", features = ["derive"] }
serde_json = "1.0.104"
socket2 = "0.5.3"
tokio = { version = "1.29.1", features = [
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
    "macros",
] }
